crates/aion-awl/tests/fixtures/rev2/schema-doors/invalid/import_anyof.awl
//! The imported contract hides an anyOf; the checker must refuse and name the keyword.
workflow import_anyof
  input thing: Thing
  outcome done: type Done, route success

type Thing = schema("anyof.schema.json")

type Done { note: String }

worker doors
  action wrap_up(thing: Thing) -> Done

step wrap
  thing |> wrap_up |> route done
